fixed height of input box - looked weird on ios

--- a/src/components/GridSquare.css
+++ b/src/components/GridSquare.css
@@ -54,7 +54,7 @@ input {
 
 .single-digit {
   width: 18px;
-  height: 100%;
+  height: 80%;
 }
 
 .double-digit {
